trunk/Archive2/1a/b177d50db7a5e9/output
main.cpp: In function 'int main()':
main.cpp:7:10: error: expected unqualified-id before 'int'
     std::int s = "123";
          ^
main.cpp:7:10: error: expected ';' before 'int'
main.cpp:8:15: error: 's' was not declared in this scope
     std::sort(s.begin(), s.end());
               ^
