trunk/Archive2/1a/b177d50db7a5e9/main.cpp
#include <algorithm>
#include <string>
#include <iostream>
 
int main()
{
    std::int s = "123";
    std::sort(s.begin(), s.end());
    do {
        std::cout << s << '\n';
    } while(std::next_permutation(s.begin(), s.end()));
}